Added tests: testEventTypesForArchiveTest, blogSearchTest, blogSearchTestN. Improved test: chooseEventTypeTest.